Fill the remaining gaps in test coverage
Add tests for the parts of the API that the suite did not reach: closing
a ScanResult, duplicate classpath entries, MethodInfoList, the modifier
predicates on ClassInfo and its members, repeatable annotations, the
unmodifiability of returned lists, recycled inflater input streams, the
archive reader, the ClassGraph builder methods, and the Class overloads
of the annotation queries on ScanResult.